[gd_scene load_steps=10 format=3 uid="uid://u1mvuy8l6k23"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_d1ahy"]
[ext_resource type="Script" path="res://scripts/ui/hud_slot.gd" id="2_muuh7"]
[ext_resource type="Texture2D" uid="uid://2btob81nu0xj" path="res://assets/ui/tile_outline.png" id="3_5va86"]
[ext_resource type="Texture2D" uid="uid://b5vipdhn607jm" path="res://assets/tiles/tools/shovel.png" id="4_ahcmr"]
[ext_resource type="Texture2D" uid="uid://cevvdhf2p5k2s" path="res://assets/tiles/tools/rototiller.png" id="5_g2ra6"]
[ext_resource type="Texture2D" uid="uid://dxnfv5aw2wdsu" path="res://assets/tiles/tools/pick-axe.png" id="6_wmhby"]
[ext_resource type="Texture2D" uid="uid://cfnt5tyopipyn" path="res://assets/tilesets/full version/tiles/FartSnipSeeds.png" id="7_t5p3x"]
[ext_resource type="Script" path="res://scripts/ui/tool_switcher.gd" id="8_d4ui7"]
[ext_resource type="Texture2D" uid="uid://chyfuhy7xfxnl" path="res://assets/ui/inventory_empty_slot.png" id="8_e8726"]

[node name="Hud" type="Node"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("1_d1ahy")
tool_switcher_path = NodePath("../ToolSwitcher")

[node name="Energy" type="VBoxContainer" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -100.0
offset_right = 206.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_muuh7")
empty_texture = ExtResource("3_5va86")

[node name="tool_slot_0" type="TextureRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton"]
z_index = 10
clip_contents = true
custom_minimum_size = Vector2(25, 40)
layout_mode = 2
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("4_ahcmr")
expand_mode = 3
stretch_mode = 5

[node name="Highlight" type="ColorRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31342, 0.766809, 0.1702, 0.631373)

[node name="TextureButton1" type="TextureButton" parent="HUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_muuh7")
empty_texture = ExtResource("3_5va86")

[node name="tool_slot_1" type="TextureRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton1"]
z_index = 10
custom_minimum_size = Vector2(25, 40)
layout_mode = 2
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("5_g2ra6")
expand_mode = 3
stretch_mode = 5

[node name="Highlight" type="ColorRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton1"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31342, 0.766809, 0.1702, 0.631373)

[node name="TextureButton2" type="TextureButton" parent="HUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_muuh7")
empty_texture = ExtResource("3_5va86")

[node name="tool_slot_2" type="TextureRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton2"]
z_index = 10
clip_contents = true
custom_minimum_size = Vector2(25, 40)
layout_mode = 2
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("6_wmhby")
expand_mode = 3
stretch_mode = 5

[node name="Highlight" type="ColorRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton2"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31342, 0.766809, 0.1702, 0.631373)

[node name="TextureButton3" type="TextureButton" parent="HUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_muuh7")
empty_texture = ExtResource("3_5va86")

[node name="tool_slot_3" type="TextureRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton3"]
z_index = 10
clip_contents = true
custom_minimum_size = Vector2(25, 40)
layout_mode = 2
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("7_t5p3x")
expand_mode = 3
stretch_mode = 5

[node name="Highlight" type="ColorRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton3"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31342, 0.766809, 0.1702, 0.631373)

[node name="TextureButton4" type="TextureButton" parent="HUD/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_muuh7")
empty_texture = ExtResource("3_5va86")

[node name="tool_slot_3" type="TextureRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton4"]
z_index = 10
clip_contents = true
custom_minimum_size = Vector2(25, 40)
layout_mode = 2
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("8_e8726")
expand_mode = 3
stretch_mode = 5

[node name="Highlight" type="ColorRect" parent="HUD/MarginContainer/HBoxContainer/TextureButton4"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31342, 0.766809, 0.1702, 0.631373)

[node name="ToolSwitcher" type="Node" parent="."]
script = ExtResource("8_d4ui7")

[connection signal="tool_changed" from="ToolSwitcher" to="ToolSwitcher" method="_on_tool_changed"]
